:sparkles: feat(): 增加了颁发did；更新did文档；查询did的接口功能
