# docs/swagger.yaml
@@ -1,10 +1,68 @@
 definitions:
+  model.Authentication:
+    properties:
+      created:
+        type: integer
+      id:
+        type: string
+      sign:
+        type: string
+      type:
+        type: string
+      updated:
+        type: integer
+    type: object
+  model.DidDocument:
+    properties:
+      '@context':
+        items:
+          type: string
+        type: array
+      authentication:
+        $ref: '#/definitions/model.Authentication'
+      created:
+        type: string
+      id:
+        type: string
+      service:
+        items:
+          $ref: '#/definitions/model.Service'
+        type: array
+      updated:
+        type: string
+      verificationMethod:
+        $ref: '#/definitions/model.VerificationMethod'
+    type: object
+  model.Service:
+    properties:
+      id:
+        type: string
+      serviceEndpoint:
+        type: string
+      type:
+        type: string
+    type: object
   model.User:
     properties:
       password:
         type: string
       username:
         type: string
+    type: object
+  model.VerificationMethod:
+    properties:
+      controller:
+        type: string
+      created:
+        type: integer
+      id:
+        type: string
+      publicKey:
+        type: string
+      type:
+        type: string
+      updated:
+        type: integer
     type: object
   requestBase.ResponseBodyData:
     properties:
@@ -76,6 +134,60 @@ paths:
           schema:
             $ref: '#/definitions/requestBase.ResponseBodyData'
       summary: 用户注册
+  /api/v1/did/create_identity:
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: 软件名称
+        in: body
+        name: body
+        required: true
+        schema:
+          type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 成功
+          schema:
+            $ref: '#/definitions/requestBase.ResponseBodyData'
+  /api/v1/did/query_identity:
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: did标识符
+        in: body
+        name: body
+        required: true
+        schema:
+          type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 成功
+          schema:
+            $ref: '#/definitions/requestBase.ResponseBodyData'
+  /api/v1/did/update_identity:
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: 新的did文档
+        in: body
+        name: body
+        required: true
+        schema:
+          $ref: '#/definitions/model.DidDocument'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 成功
+          schema:
+            $ref: '#/definitions/requestBase.ResponseBodyData'
   /api/v1/service/checkSoft:
     post:
       consumes:
